# seng440

Huffman Decoding/: .gitignore  BENCHMARKING.md  CLEANUP_COMPLETE.md  CMakeLists.txt  CODE_SNAPSHOTS_ADDED.md  COMPREHENSIVE_RESULTS_AND_IMPROVEMENTS_REPORT.md  MASTER_WALKTHROUGH.md  README.md  REGRESSION_TESTING.md  development-plan.md  generate_fixed_tests  huffman  huffman_benchmark  implementationV1.md  main.c  project-specs.md  regression_test  sample.txt  test_setup  test_setup.c  track_optimization.sh
Huffman Decoding.xcodeproj/: project.pbxproj
Huffman Decoding.xcodeproj/xcuserdata/jacksonkonkin.xcuserdatad/xcschemes/: xcschememanagement.plist
Huffman Decoding/analysis/assembly_comparison/: bit_stream_baseline.s  bit_stream_clz.s  bit_stream_final.s  bit_stream_iteration3.s  decoder_baseline.s  decoder_final.s  decoder_iteration3.s
Huffman Decoding/analysis/iteration1/: VERSION1_COMPLETE_REPORT.md  implementationV1.md
Huffman Decoding/analysis/iteration2/: CODE_EVOLUTION_COMPARISON.md  ITERATION1_VS_ITERATION2_ANALYSIS.md  ITERATION2_OPTIMIZATION_REPORT.md  ITERATION2_TESTING_GUIDE.md
Huffman Decoding/analysis/iteration3/: COMPLETE_ITERATIONS_COMPARISON.md  ITERATION3_IMPLEMENTATION_REPORT.md  ITERATION4_LOOKUP_TABLES_IMPLEMENTATION.md
Huffman Decoding/include/core/: benchmark.h  bit_stream.h  decoder.h  encoder.h  file_format.h  huffman_compress.h  huffman_tree.h  regression_test.h
Huffman Decoding/optimization_results/: baseline.json
Huffman Decoding/src/: benchmark_runner.c  generate_fixed_tests.c  huffman_cli.c  main.c  regression_runner.c
Huffman Decoding/src/core/: benchmark.c  bit_stream.c  bit_stream_iteration4.c  decoder.c  decoder_iteration4.c  encoder.c  file_format.c  huffman_compress.c  huffman_tree.c  regression_test.c
